--- a/EducationQuiz/src/app/app.component.html
+++ b/EducationQuiz/src/app/app.component.html
@@ -1,3 +1,8 @@
-<app-nav></app-nav>
-
-<router-outlet></router-outlet>
+<div class="parent">
+    <div class="div1">
+        <app-nav></app-nav>
+    </div>
+    <div class="div2">
+        <router-outlet></router-outlet>
+    </div>
+</div>
