--- a/EducationQuiz/src/styles.scss
+++ b/EducationQuiz/src/styles.scss
@@ -2,3 +2,14 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+@import '~@angular/material/prebuilt-themes/indigo-pink.css';
+.header{
+    color: white;
+    font-size: x-large;
+    text-decoration: none;
+}
+.text{
+    color: white;
+    font-size:large;
+    text-decoration: none;
+}
