--- a/EducationQuiz/src/modules/profile/components/register/register.component.html
+++ b/EducationQuiz/src/modules/profile/components/register/register.component.html
@@ -1,30 +1,49 @@
-<form [formGroup]="registerForm" novalidate>
+<form [formGroup]="registerForm" (ngSubmit)="registration()"  validate>
     <p>Регистрация</p>
     <mat-form-field class="half-width" appearance="outline">
         <mat-label>Введите имя</mat-label>
-        <input placeholder="Имя" matInput>
+        <input matInput placeholder="Ваше имя" formControlName="firstname" required>
+        <mat-error *ngIf="registerForm.controls['firstname'].invalid">
+            <p>Введите Ваше имя</p>
+        </mat-error>
     </mat-form-field>
-
     <mat-form-field class="half-width" appearance="outline">
+        <mat-label>Введите фамилию</mat-label>
+        <input matInput placeholder="Ваша фамилия" formControlName="secondname" required>
+        <mat-error *ngIf="registerForm.controls['secondname'].invalid">
+            <p>Введите Вашу фамилию</p>
+        </mat-error>
+    </mat-form-field>
+    <br>
+    <mat-form-field class="three-quarters-width" appearance="outline">
         <mat-label>Введите почту</mat-label>
-        <input matInput placeholder="pat@example.com" [formControl]="email" required>
-        <mat-error *ngIf="email.invalid">{{getErrorMessage()}}</mat-error>
+        <input matInput placeholder="mail@example.com" formControlName="еmail" required>
+        <mat-error *ngIf="registerForm.controls['еmail'].invalid">
+            <p>Введите Вашу почту</p>
+        </mat-error>
     </mat-form-field>
     <br>
     <mat-form-field class="half-width" appearance="outline">
         <mat-label>Введите пароль</mat-label>
-        <input placeholder="Пароль" matInput type="password">
+        <input matInput placeholder="Ваша фамилия" formControlName="password" type="password" required>
+        <mat-error *ngIf="registerForm.controls['password'].invalid">
+            <p>Введите Вашу фамилию</p>
+        </mat-error>
     </mat-form-field>
     <mat-form-field class="half-width" appearance="outline">
         <mat-label>Повторите пароль</mat-label>
-        <input placeholder="Пароль" matInput type="password">
+        <input matInput placeholder="Повторите пароль" formControlName="confirmPassword" type="password" required>
+        <mat-error *ngIf="registerForm.controls['confirmPassword'].invalid">
+            <p>Пароли не совпадают</p>
+        </mat-error>
     </mat-form-field>
     <br>
-        <label>Я: </label>
-        <mat-radio-group>
-            <mat-radio-button value="auto">Ученик</mat-radio-button>
-            <mat-radio-button value="always">Учитель</mat-radio-button>
+    <label>Я: </label>
+        <mat-radio-group formControlName="role">
+            <mat-radio-button value="student" selected>Ученик</mat-radio-button>
+            <mat-radio-button value="teacher">Учитель</mat-radio-button>
         </mat-radio-group>
+    <br>
     <br>
     <button mat-stroked-button color=primary>Зарегестрироваться</button>
 </form>
