--- a/EducationQuiz/src/modules/profile/components/register/register.component.scss
+++ b/EducationQuiz/src/modules/profile/components/register/register.component.scss
@@ -1,9 +1,13 @@
-.full-width{
-    width: 90%;
-    padding-right: 5%;
-    padding-left: 5%;
+.full-width {
+  width: 90%;
+  padding-right: 5%;
+  padding-left: 5%;
 }
-.half-width{
-    width: 45%;
-    padding-right: 5%;
+.half-width {
+  width: 45%;
+  padding-right: 5%;
+}
+.three-quarters-width {
+  width: 70%;
+  padding-right: 5%;
 }
