--- a/EducationQuiz/src/modules/profile/components/profile/profile.component.html
+++ b/EducationQuiz/src/modules/profile/components/profile/profile.component.html
@@ -1,5 +1,5 @@
 <div>
-    <p>Login:{{user.login}}</p>
-    <p>Nickname:{{user.nickname}}</p>
+    <!-- <p>Login:{{user.login}}</p>
+    <p>Nickname:{{user.nickname}}</p> -->
     <p>Пройденные тесты:</p>
 </div>
