--- a/backend/templates/home.html
+++ b/backend/templates/home.html
@@ -2,6 +2,7 @@
 
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>Django-ng</title>
@@ -10,11 +11,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-<link rel="stylesheet" href="{% static 'ang/styles.css' %}"></head>
+  <link rel="stylesheet" href="{% static 'ang/styles.css' %}">
+</head>
+
 <body>
-	<app-root><img src="/static/ang/assets/images/loading/load.gif" alt="Loading..." style="position:fixed; top:50%; left:50%; transform: translate(-50%, -50%);"></app-root>
-	<script type="text/javascript" src="{% static 'ang/runtime.js' %}"></script>
-	<script type="text/javascript" src="{% static 'ang/polyfills.js' %}"></script>
-	<script type="text/javascript" src="{% static 'ang/main.js' %}"></script>
+  <app-root><img src="/static/ang/assets/images/loading/load.gif" alt="Loading..."
+      style="position:fixed; top:50%; left:50%; transform: translate(-50%, -50%);"></app-root>
+  <script type="text/javascript" src="{% static 'ang/runtime.js' %}"></script>
+  <script type="text/javascript" src="{% static 'ang/polyfills.js' %}"></script>
+  <script type="text/javascript" src="{% static 'ang/main.js' %}"></script>
 </body>
+
 </html>
