--- a/backend/templates/home.html
+++ b/backend/templates/home.html
@@ -15,8 +15,7 @@
 </head>
 
 <body>
-  <app-root><img src="/static/ang/assets/images/loading/load.gif" alt="Loading..."
-      style="position:fixed; top:50%; left:50%; transform: translate(-50%, -50%);"></app-root>
+  <app-root>Loading</app-root>
   <script type="text/javascript" src="{% static 'ang/runtime.js' %}"></script>
   <script type="text/javascript" src="{% static 'ang/polyfills.js' %}"></script>
   <script type="text/javascript" src="{% static 'ang/main.js' %}"></script>
