--- a/EducationQuiz/src/app/components/nav/nav.component.html
+++ b/EducationQuiz/src/app/components/nav/nav.component.html
@@ -1,16 +1,15 @@
 <mat-toolbar color="primary">
-    <a  class="inline header" routerLink=""> Angular Quiz</a>
+    <a class="inline header" routerLink=""> Angular Quiz</a>
     <a class="inline text" routerLink="profile">Профиль</a>
     <a class="inline text" routerLink="tests">Тесты</a>
     <span class="spacer"></span>
-    <ng-container *ngIf="isLogin; else elseTemplate">
+    <ng-container *ngIf="user; else elseTemplate">
         <a class="inline right" routerLink="profile">Пользователь</a>
         <a class="inline right" routerLink="profile/logout">Выход</a>
     </ng-container>
     <ng-template #elseTemplate>
         <a class="inline right text" routerLink="profile/login">Войти</a>
-        <a class="inline right text"  routerLink="profile/register">Регистрация</a>
+        <a class="inline right text" routerLink="profile/register">Регистрация</a>
     </ng-template>
 
 </mat-toolbar>
-
