--- a/EducationQuiz/src/modules/profile/components/login/login.component.html
+++ b/EducationQuiz/src/modules/profile/components/login/login.component.html
@@ -1,10 +1,10 @@
 <form [formGroup]="loginForm" (ngSubmit)="login()" validate>
     <p>Авторизация</p>
     <mat-form-field class="half-width" appearance="outline">
-        <mat-label>Введите почту</mat-label>
-        <input matInput placeholder="mail@example.com" formControlName="еmail" required>
-        <mat-error *ngIf="loginForm.controls['еmail'].invalid">
-            <p>Введите Вашу почту</p>
+        <mat-label>Введите пароль</mat-label>
+        <input matInput placeholder="Ваш пароль" formControlName="email" required>
+        <mat-error *ngIf="loginForm.controls['password'].invalid">
+            <p>Введите Ваш пароль</p>
         </mat-error>
     </mat-form-field>
     <br>
