--- a/EducationQuiz/src/app/components/nav/nav.component.html
+++ b/EducationQuiz/src/app/components/nav/nav.component.html
@@ -6,7 +6,7 @@
     <span class="spacer"></span>
     <ng-container *ngIf="user; else elseTemplate">
         <a class="inline right text" routerLink="profile">{{user.username}}</a>
-        <a class="inline right text" (click)="logout">Выход</a>
+        <a class="inline right text" (click)="logout()">Выход</a>
     </ng-container>
     <ng-template #elseTemplate>
         <a class="inline right text" routerLink="profile/login">Войти</a>
