--- a/EducationQuiz/src/app/components/nav/nav.component.html
+++ b/EducationQuiz/src/app/components/nav/nav.component.html
@@ -2,6 +2,8 @@
     <a class="inline header" routerLink=""> Angular Quiz</a>
     <a class="inline text" routerLink="profile">Профиль</a>
     <a class="inline text" routerLink="tests">Тесты</a>
+    <a class="inline text" routerLink="quizzes/create">Создать тест</a>
+    <a class="inline text" routerLink="quizzes/edit">Редактировать тест</a>
     <!-- <a class="inline text" routerLink="users">Пользователи</a> -->
     <span class="spacer"></span>
     <ng-container *ngIf="user; else elseTemplate">
