--- a/EducationQuiz/src/modules/quizzes/components/quiz-info/quiz-info.component.html
+++ b/EducationQuiz/src/modules/quizzes/components/quiz-info/quiz-info.component.html
@@ -1,1 +1,14 @@
-<p>quiz-info works!</p>
+<mat-card class="example-card">
+  <mat-card-header>
+    <mat-card-title>{{quiz.title}}</mat-card-title>
+    <mat-card-subtitle>Автор {{quiz.owner.firstname+" "+quiz.owner.secondname}}</mat-card-subtitle>
+  </mat-card-header>
+
+  <mat-card-content>
+    <p>{{quiz.description}}</p>
+  </mat-card-content>
+  <mat-card-actions>
+    <button mat-button>LIKE</button>
+    <button mat-button>SHARE</button>
+  </mat-card-actions>
+</mat-card>
