--- a/EducationQuiz/src/modules/quizzes/components/quiz-info/quiz-info.component.html
+++ b/EducationQuiz/src/modules/quizzes/components/quiz-info/quiz-info.component.html
@@ -8,7 +8,10 @@
     <p>{{quiz.description}}</p>
   </mat-card-content>
   <mat-card-actions>
-    <button mat-button>LIKE</button>
-    <button mat-button>SHARE</button>
+    <button mat-button (click)="view()">Просмотр</button>
+    <button mat-button (click)="pass()">Пройти тест</button>
+
+    <button [hidden]="canEdit" mat-button (click)="edit()">Редактировать</button>
+
   </mat-card-actions>
 </mat-card>
